--- a/simple-form.html
+++ b/simple-form.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" fetchpriority="high" />
-
+  <!--  тут можно поменять цветовую тему чуть-чуть изменив урл загрузки, выбор тут https://picocss.com/docs/version-picker -->
+  
   <style>
     main {
       margin: 0 auto;
@@ -45,7 +47,7 @@
   </style>
 
   <title>PF Simple form</title>
-  <!-- тут меняйте текст что пойдёт во вкладку браузера -->
+  <!-- ⚠️ тут меняйте текст что пойдёт во вкладку браузера -->
 
 </head>
 
@@ -53,19 +55,20 @@
   <main class="container">
 
     <h1>Simple form for Planfix</h1>
-    <!-- тут меняйте заголовок над формой -->
+    <!-- ⚠️ тут меняйте заголовок над формой -->
 
     <form id="simpleform">
 
       <!-- !! в форму можно ставить поля разного типа https://developer.mozilla.org/ru/docs/Web/HTML/Element/form  -->
-
+      <!-- или воспользоваться генератором форм, например https://paperform.co/tools/free-html-form-creator/ -->
+      
       <div>
-        <label for="name">Название задачи</label>
+        <label for="name">Имя</label>
         <input type="text" id="name" name="name" placeholder="Введите название" required />
       </div>
 
       <div>
-        <label for="description">Описание задачи</label>
+        <label for="description">Описание</label>
         <textarea id="description" name="description" placeholder="Введите описание" required></textarea>
       </div>
 
@@ -85,9 +88,9 @@
       </div>
 
       <div>
-        <input type="checkbox" role="switch" id="agreement" name="agreement" required />
+        <input type="checkbox" id="agreement" name="agreement" required />
         <label for="agreement">Я согласен с политикой обработки данных <a href="#"></a> </label>
-        <!-- выше вместо # можно поставить ссылку на текст вашей политики -->
+        <!-- ⚠️ выше вместо # можно поставить ссылку на текст вашей политики -->
       </div>
 
       <div id="submitArea">
@@ -109,7 +112,7 @@
         try {
           const response = await fetch(
             "https://YOUR_ACCOUNT.planfix.ru/webhook/file/...",
-            // выше ссылка на вебхук (POST-запрос multipart/form-data)
+            // ⚠️ выше ссылка на вебхук (POST-запрос multipart/form-data)
             {
               method: "POST",
               body: formData,
@@ -129,17 +132,17 @@
 
           // // (2) вариант вывода ответа с выводом ссылки на емайл созданной задачи
           // const taskNumber = data.task;
-          // const emailAddress = `task+${taskNumber}@YOUR_ACCOUNT.planfix.ru`;  // меняйте урл аккаунта на ваш
+          // const emailAddress = `task+${taskNumber}@YOUR_ACCOUNT.planfix.ru`;  // ⚠️ меняйте урл аккаунта на ваш
           // const emailSubject = encodeURIComponent(`Дополнение по заявке #${taskNumber}`); // это тема письма
           // const emailBody = encodeURIComponent('Я хочу дополнить информацию ...'); // это тело письма
           // const mailtoUrl = `mailto:${emailAddress}?subject=${emailSubject}&body=${emailBody}`;
-          // responseDiv.innerHTML = `<p>Заявка успешно создана!<br>Вы можете отправить дополнительную информацию напрямую в <a href="${mailtoUrl}">заявку #${taskNumber}</a></p>`;
+          // responseDiv.innerHTML = `<p>Заявка успешно создана!<br>Вы можете отправить дополнительную информацию напрямую в <a href="${mailtoUrl}">заявку #${taskNumber} по email</a></p>`;
           // responseDiv.className = "success";
 
 
           // // (3) вариант вывода ответа с показом ID задачи и ссылкой на неё
           // const taskNumber = data.task;
-          // const taskUrl = `https://YOUR_ACCOUNT.planfix.ru/task/${taskNumber}`; // меняйте урл аккаунта на ваш
+          // const taskUrl = `https://YOUR_ACCOUNT.planfix.ru/task/${taskNumber}`; // ⚠️ меняйте урл аккаунта на ваш
           // responseDiv.innerHTML = `<p>Успех! Задача <a href="${taskUrl}" target="_blank">#${taskNumber}</a> создана</p>`;
           // responseDiv.className = "success";
 
@@ -170,7 +173,7 @@
     });
   </script>
 
-  <!-- сюда даже можно прописать даже код Yandex.Metrika если вам важна аналитика формы -->
+  <!-- сюда даже можно прописать код Yandex.Metrika если вам важна аналитика формы -->
 
 </body>
 
